# arrow-clock

./: CMakeLists.txt  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.md
Clock/: CMakeLists.txt
Clock/include/lib/: glfw3.lib
Clock/include/libraries/glad/: glad.h
Clock/src/: glad.c  main.cpp  main.h
Clock/src/Assets/Shaders/: default.frag  default.vert
Clock/src/Graphics/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  ImguiSetup.cpp  ImguiSetup.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VBO.cpp  VBO.h  Window.cpp  Window.h
